src/test/ui/issues/issue-38604.stderr
error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/issue-38604.rs:14:13
   |
LL | trait Foo where u32: Q<Self> {
   |       ---            ------- ...because it uses `Self` as a type parameter in this
   |       |
   |       this trait cannot be made into an object...
...
LL |     let _f: Box<dyn Foo> =
   |             ^^^^^^^^^^^^ the trait `Foo` cannot be made into an object

error[E0038]: the trait `Foo` cannot be made into an object
  --> $DIR/issue-38604.rs:15:9
   |
LL | trait Foo where u32: Q<Self> {
   |       ---            ------- ...because it uses `Self` as a type parameter in this
   |       |
   |       this trait cannot be made into an object...
...
LL |         Box::new(());
   |         ^^^^^^^^^^^^ the trait `Foo` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<std::boxed::Box<dyn Foo>>` for `std::boxed::Box<()>`
   = note: required by cast to type `std::boxed::Box<dyn Foo>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
